--- a/UAV_Viewer/uav_viewer.ui
+++ b/UAV_Viewer/uav_viewer.ui
@@ -50,7 +50,7 @@
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -79,7 +79,7 @@
       <widget class="QLabel" name="lab_Image">
        <property name="minimumSize">
         <size>
-         <width>160</width>
+         <width>400</width>
          <height>300</height>
         </size>
        </property>
