--- a/UAV_Viewer/uav_viewer.ui
+++ b/UAV_Viewer/uav_viewer.ui
@@ -50,51 +50,36 @@
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="layoutWidget">
+   <widget class="QTreeWidget" name="tree_View">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>40</y>
-      <width>581</width>
-      <height>302</height>
+      <x>11</x>
+      <y>41</y>
+      <width>173</width>
+      <height>300</height>
      </rect>
     </property>
-    <layout class="QHBoxLayout" name="horizontalLayout_2">
-     <item>
-      <widget class="QTreeWidget" name="tree_View">
-       <property name="minimumSize">
-        <size>
-         <width>160</width>
-         <height>300</height>
-        </size>
-       </property>
-       <column>
-        <property name="text">
-         <string notr="true">1</string>
-        </property>
-       </column>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLabel" name="lab_Image">
-       <property name="minimumSize">
-        <size>
-         <width>400</width>
-         <height>300</height>
-        </size>
-       </property>
-       <property name="mouseTracking">
-        <bool>true</bool>
-       </property>
-       <property name="autoFillBackground">
-        <bool>false</bool>
-       </property>
-       <property name="text">
-        <string>00</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
+    <property name="minimumSize">
+     <size>
+      <width>160</width>
+      <height>300</height>
+     </size>
+    </property>
+    <column>
+     <property name="text">
+      <string notr="true">1</string>
+     </property>
+    </column>
+   </widget>
+   <widget class="QtImageLabel" name="qtImageLabel">
+    <property name="geometry">
+     <rect>
+      <x>230</x>
+      <y>60</y>
+      <width>281</width>
+      <height>251</height>
+     </rect>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
@@ -118,6 +103,13 @@
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
+ <customwidgets>
+  <customwidget>
+   <class>QtImageLabel</class>
+   <extends>QWidget</extends>
+   <header>qtimagelabel.h</header>
+  </customwidget>
+ </customwidgets>
  <resources>
   <include location="uav_viewer.qrc"/>
  </resources>
