--- a/QtImageLabel/qtimagelabel.ui
+++ b/QtImageLabel/qtimagelabel.ui
@@ -10,6 +10,12 @@
     <height>300</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>400</width>
+    <height>300</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
@@ -17,10 +23,20 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>5</y>
-     <width>381</width>
-     <height>281</height>
+     <y>10</y>
+     <width>380</width>
+     <height>280</height>
     </rect>
+   </property>
+   <property name="minimumSize">
+    <size>
+     <width>380</width>
+     <height>280</height>
+    </size>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(255, 255, 255);
+font: 75 italic 16pt &quot;Arial Narrow&quot;;</string>
    </property>
    <property name="text">
     <string>ImageControl</string>
